--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
     {% include head-custom.html %}
-
     {% seo %}
 </head>
 
@@ -19,6 +18,7 @@
             <h1>{{ site.title | default: site.github.repository_name }}</h1>
         </a>
         <h2>{{ site.description | default: site.github.project_tagline }}</h2>
+        {% include reading-time.html %}
 
         <section id="downloads">
             {% if site.show_downloads %}
